examples/type_system/failing/176_match_missing_open_brace.flx
let x = match 1 0 -> 0
let after = 1
